[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "correlation-length-investigation"
version = "0.1.0"
description = "Coexistence fitting and correlation-length analysis for lattice-gas simulations"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pyyaml",
    "simple-slurm",
    "torch",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["coex*", "correlation*", "common*"]

[tool.pytest.ini_options]
markers = [
    "slow: expensive MC or large-L synthesis tests",
]
testpaths = ["tests"]
